# l65_vivian_linus

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: playground.ipynb
proteinvirtual/: constants.py  train.py
proteinvirtual/config/: train.yaml
proteinvirtual/config/encoder/: gnn_geo_base.yaml  gnn_geo_hetero.yaml  gnn_geo_hetero_hierarchy.yaml  gnn_nongeo_base.yaml  gnn_nongeo_hetero.yaml  gnn_nongeo_hetero_configurable.yaml  gnn_nongeo_hetero_hierarchy.yaml  schnet.yaml  schnet_base.yaml  schnet_hierarchy.yaml  virtual_schnet.yaml  virtual_schnet_hierarchy.yaml
proteinvirtual/config/features/: ca_nongeo_hetero.yaml  ca_nongeo_hetero_hierachy.yaml  equivariant_geo_hetero_hierachy.yaml  equivariant_geo_homo.yaml  geo_hetero.yaml  geo_hetero_hierachy.yaml  geo_hetero_hierarchy.yaml  geo_hetero_hierarchy_p.yaml  geo_hetero_hierarchy_p_inverse_fold.yaml  geo_hetero_p.yaml  geo_hetero_p_inverse_fold.yaml  geo_homo.yaml  geo_homo_hierachy.yaml  nongeo_hetero.yaml  nongeo_hetero_configurable.yaml  nongeo_hetero_dense.yaml  nongeo_hetero_hierarchy.yaml  nongeo_hetero_hierarchy_p.yaml  nongeo_hetero_hierarchy_p_inverse_fold.yaml  nongeo_hetero_hierarchy_sparse.yaml  nongeo_hetero_sparse.yaml  nongeo_hetero_zero_edges.yaml  nonvirtual.yaml
proteinvirtual/config/models/: gnn_hetero_hierarchy.yaml
proteinvirtual/config/sweeps/: gnn_geo_fold.yaml  schnet_fold.yaml  (+2 more)
proteinvirtual/features/: edge_features.py  edges.py  factory.py  features.py  node_features.py  nodes.py  utils.py
tests/: conftest.py
tests/features/: test_features.py
(+27 files in other folders)
